# shenbi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  cliff.toml  command-to-give.md  executor_config.toml  goal-prompt.md  index.html  justfile  mkdocs.yml  objects.inv  outline-example.md  pyproject.toml  renovate.json  report-example.txt  run_pipeline.sh  sitemap.xml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  skill-proposal.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  nightly.yml  pre-commit-autoupdate.yml  release.yml  security.yml
.hypothesis/: .gitignore
.opencode/plugins/: shenbi.js
.superpowers/sdd/: task-18-8-report.md
.zcode/plans/: plan-sess_ca133467-377d-4c1d-a764-f74af1c16924.md
_shared-evidence-template/REVIEW_EVIDENCE/: index.html
adr/: index.html
adr/0000-template/: index.html
adr/0001-pyproject-uv/: index.html
adr/0002-ruff-strict/: index.html
adr/0003-mypy-basedpyright-dual/: index.html
adr/0004-pytest-framework/: index.html
adr/0005-structlog/: index.html
adr/0006-typed-exceptions/: index.html
adr/0007-adr-process/: index.html
adr/0008-validate-gate-modularization/: index.html
adr/0009-dispatcher-python-rewrite/: index.html
api/exceptions/: index.html
api/logging/: index.html
architecture/overview/: index.html
basedpyright-overrides/: index.html
benchmarks/anchors/: AC-001.md  AC-002.md  AC-003.md  AC-004.md  AC-005.md  AC-006.md  AC-007.md  AC-008.md  AC-009.md  AC-010.md  AC-011.md
docs/: basedpyright-overrides.md  index.md  roadmap.md
docs/_shared-evidence-template/: REVIEW_EVIDENCE.md
docs/adr/: 0000-template.md  0001-pyproject-uv.md  0002-ruff-strict.md  0003-mypy-basedpyright-dual.md  0004-pytest-framework.md  0005-structlog.md  0006-typed-exceptions.md  0007-adr-process.md  0008-validate-gate-modularization.md  0009-dispatcher-python-rewrite.md  index.md
docs/api/: exceptions.md  logging.md
docs/architecture/: overview.md
docs/framework/: chapter-file-format.md  decisions-schema.md  dependency-dag.json  dispatcher.md  gates.md  logging.md  scoring.md  truth-files.index.json  truth-files.yaml
docs/getting-started/: concepts.md  first-novel.md  installation.md
docs/skills/: index.md
docs/specs/: 2026-06-08-shenbi-design.md  2026-06-11-test-plan-design.md
framework/chapter-file-format/: index.html
framework/decisions-schema/: index.html
framework/dispatcher/: index.html
framework/gates/: index.html
framework/logging/: index.html
framework/scoring/: index.html
getting-started/concepts/: index.html
getting-started/first-novel/: index.html
getting-started/installation/: index.html
hooks/: hooks-cursor.json  hooks.json  run-hook.cmd  session-start
novel-output/: audit_script.py
novel-output/test-validation/: genre-config.json  novel.json  pipeline-state.json  trace.jsonl  truth-index.json  write-audit.jsonl
novel-output/validation-results/: stage1-result.txt  stage2-result.txt  stage4-result.txt  validation-report.md
novel-output/xinghuo-ranqiong/: DEBUG_USE_MANUAL_CREATE.md  config-change-log.jsonl  genre-config.json  novel.json  pipeline-state.json  progress.json  truth-embeddings.db  truth-index.json
plugins/: master.json
roadmap/: index.html
scripts/: lint_contract_fields.py
search/: search_index.json
skills/: index.html
skills/shenbi-anchor-curate/: SKILL.md
skills/shenbi-anti-detect/: SKILL.md
skills/shenbi-book-spine-init/: SKILL.md
skills/shenbi-canon-import/: SKILL.md
skills/shenbi-chapter-drafting/: SKILL.md  anti-ai-reference.md
skills/shenbi-chapter-pattern/: SKILL.md
skills/shenbi-chapter-planning/: SKILL.md
skills/shenbi-chapter-revision/: SKILL.md  revision-modes.md
skills/shenbi-character-design/: SKILL.md
skills/shenbi-character-extraction/: SKILL.md
skills/shenbi-context-composing/: SKILL.md
skills/shenbi-drift-guidance/: SKILL.md
skills/shenbi-escalation-review/: SKILL.md
skills/shenbi-faction-builder/: SKILL.md
skills/shenbi-foreshadowing-lifecycle/: SKILL.md
skills/shenbi-foreshadowing-plant/: SKILL.md  hook-types.md
skills/shenbi-foreshadowing-recall/: SKILL.md
skills/shenbi-foreshadowing-resolve/: SKILL.md  chase-power.md
skills/shenbi-foreshadowing-track/: SKILL.md  lifecycle-states.md
skills/shenbi-foundation-review/: SKILL.md  scoring-rubric.md
skills/shenbi-genre-config/: SKILL.md
skills/shenbi-import-analysis/: SKILL.md
skills/shenbi-intent-management/: SKILL.md
skills/shenbi-length-normalizing/: SKILL.md
skills/shenbi-location-builder/: SKILL.md
skills/shenbi-market-radar/: SKILL.md
skills/shenbi-memory-distill/: SKILL.md
skills/shenbi-pacing-design/: SKILL.md
skills/shenbi-plot-thread-weaver/: SKILL.md
skills/shenbi-power-system/: SKILL.md
skills/shenbi-relationship-map/: SKILL.md
skills/shenbi-review-anti-ai/: SKILL.md  checklist.md
skills/shenbi-review-arc-payoff/: SKILL.md
skills/shenbi-review-character/: SKILL.md  ooc-dimensions.md
skills/shenbi-review-continuity/: SKILL.md
skills/shenbi-review-dialogue/: SKILL.md
skills/shenbi-review-era/: SKILL.md  era-reference.md
tests/: ARCHIVE-MIGRATED.md  __init__.py  _mypy_smoke_test.py  conftest.py  dispatch-subagent.sh  error_guidance.py  exceptions.py  lock-tool-hashes.sh  logging.py  phase-runner.py  regenerate-baselines.sh  round-exec.sh  scoring.py  summarize-round.py  test-gates.sh  test_integrity.py  update-progress.py  validate-gate.py
tools/: audit-skill-descriptions.py  compare_mutation_score.py  generate_autocheck_docs.py  lint_contract_graph.py  lint_contracts.py  lint_no_forbid_with_computed_field.py  lint_no_fs_mutation.py  lint_repo_consistency.py  lint_status_strings.py  migrate_contract_to_frontmatter.py  pre-push-check.sh
truth/: bridge_tracker.md  character_matrix.md
(+4485 files in other folders)
