[project]
name = "shenbi"
version = "0.1.0"
description = "Shenbi novel-writing AI skill framework"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ThomasChangX" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",        # P-1 不用；为 P0 schemas 准备
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    # 注：去除 patch>=1.16（unmaintained since 2016, codebase 用 unittest.mock）
    # 注：去除 click>=8.1.7（CLI 用 stdlib argparse，无需第三方框架；如未来需要 rich CLI 再加）
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
    "pytest-ordering>=0.6",
    "pytest-randomly>=3.15.0",
    "hypothesis>=6.97.0",
    "mypy>=1.8.0",
    "basedpyright>=1.13.0",   # 纯 Python 的 pyright fork，避免 Node.js 依赖
    "ruff>=0.1.13",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
    "cyclonedx-bom>=4.0.0",
    "mutmut>=3.0.0",
    "coverage>=7.4.0",
    "yamllint>=1.33.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.4",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
# 6 entry points land in PR-18. shenbi-generate-plugins added in PR-45
# (Cluster 07) when src/shenbi/plugins/generate.py is created.
shenbi-validate = "shenbi.gates.cli:main"
shenbi-dispatch = "shenbi.dispatcher.cli:main"
shenbi-score = "shenbi.scoring:main"
shenbi-summarize = "shenbi.summarize_round:main"
shenbi-progress = "shenbi.update_progress:main"
shenbi-phase = "shenbi.phase_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shenbi"]

# Mutation testing configuration (P-1 加成项 19，baseline 跑在 PR-23)
[tool.mutmut]
paths-to-mutate = ["src/shenbi/exceptions.py", "src/shenbi/logging.py", "src/shenbi/gates/shared.py"]
tests-dir = "tests/unit/"
do-not-mutate = ["tests/rounds/archived/**"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "tests/rounds/archived",
    "tests/rounds/round-[0-9][0-9][0-9]-*",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "B",
    "A",
    "C4",
    "PIE", "RET", "SIM",
    "PL",
    "UP",
    "RUF",
    "D",
]
ignore = [
    "D100", "D104",
    "PLR0913",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"skills/**/*.md" = ["ALL"]
# P-1.A: legacy code in tests/*.py has many style violations.
# PR-12 (P-1.D) will refactor these files and remove the ignores.
"tests/*.py" = [
    "D103", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
]
# P-1.E temporary: moved legacy code now at src/shenbi/*.py inherits the
# same suppression set as tests/*.py. Removed module-by-module in PR-25
# (Cluster 03) as type annotations and cleanup land.
"src/shenbi/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
# P-1.E PR-19: per-gate modules extracted from validate-gate.py carry the
# same legacy-untyped status. Removed in PR-25 (Cluster 03 cleanup).
"src/shenbi/gates/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901", "PLW0603",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
"src/shenbi/gates/g4/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901", "PLW0603",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
"src/shenbi/dispatcher/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901", "PLW0603",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
"src/shenbi/dispatcher/modes/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901", "PLW0603",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
"src/shenbi/exceptions.py" = ["D107", "D105", "N818"]
"src/shenbi/skill_utils/*.py" = [
    "D103", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901",
    "PIE810",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
"src/shenbi/skill_utils/**/*.py" = [
    "D103", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901",
    "PIE810",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105", "SIM108",
    "C401", "C416",
    "B007",
    "I001",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true

# P-1.E PR-27: skill_utils scripts moved from skills/* but not yet annotated.
# Annotation + tests deferred to follow-up (spec PR-27 acceptance: 90%/80% coverage).
[[tool.mypy.overrides]]
module = ["shenbi.skill_utils.*"]
ignore_errors = true
no_implicit_reexport = true
namespace_packages = true
plugins = ["pydantic.mypy"]

# P-1.A temporary overrides: legacy untyped code in tests/*.py
# PR-12 (P-1.E) will add type hints and remove these overrides.
# Pytest decorators (@pytest.fixture) are untyped; relax strict-mode check
# for test files so mypy doesn't false-positive on standard pytest usage.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

# Third-party stubs
[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.basedpyright]
include = ["tests", "src/shenbi"]
exclude = [
    "tests/rounds/archived",
    "tests/rounds/round-[0-9][0-9][0-9]-*",
    "**/__pycache__",
    # P-1.A: legacy untyped code; P-1.D PR-12 removes these exclusions
]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"

# Per-directory overrides via executionEnvironments (basedpyright's
# supported mechanism — [[tool.basedpyright.overrides]] is not recognized).
# Order matters: more specific roots first, the project root applies
# anything not matched above.
# See cluster-05 post-PR-25 review for the per-category rationale.

# Test code: pytest fixtures, Mock objects, dynamic setattr, and helper
# functions are inherently untyped by design. Strict-mode noise on these
# does not reflect real bugs (reportPossiblyUnboundVariable,
# reportArgumentType, reportIndexIssue still catch). Industry norm:
# tests/ runs standard, not strict.
# Router/re-export modules under gates/: imports marked `# noqa: F401`
# are intentional re-exports (gate modules aggregate symbols from
# gates/shared.py so callers can `from shenbi.gates.g4.generic import X`).
# ruff respects `# noqa: F401`; basedpyright does not.
executionEnvironments = [
  { root = "tests", reportUnusedVariable = "none", reportUnusedFunction = "none", reportUnusedImport = "none", reportUnknownVariableType = "none", reportUnknownLambdaType = "none", reportUnknownParameterType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportMissingParameterType = "none", reportPrivateUsage = "none" },

  # skill_utils/ scripts (PR-27): mypy has `ignore_errors = true` for
  # shenbi.skill_utils.* (annotation + tests deferred to follow-up).
  # Mirror that here so basedpyright and mypy agree. See
  # [[tool.mypy.overrides]] above.
  { root = "src/shenbi/skill_utils", reportUnknownVariableType = "none", reportUnknownParameterType = "none", reportUnknownLambdaType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportMissingParameterType = "none", reportPrivateUsage = "none", reportMissingTypeStubs = "none" },

  # gates/: imports marked `# noqa: F401` are intentional re-exports;
  # gate modules also legitimately call shared.py's _find_report /
  # _normalize_file_paths helpers (these are project-internal by
  # convention, not Python-private). reportUnknown* noise stems from
  # jload/yload helpers returning Any (JSON/YAML dicts are inherently
  # heterogeneous); narrowing requires rewriting those signatures, which
  # is deferred to a follow-up. reportUnused{Variable,Function} are
  # disabled because gates/ has 3 known stubs (allowed_prefixes,
  # tension_phases, mf) tracked for follow-up, plus 3 router helpers
  # (_find_report, _normalize_file_paths, _text_fingerprint) that
  # basedpyright doesn't see cross-module usage for.
  # Real-bug rules (reportPossiblyUnboundVariable, reportArgumentType,
  # reportIndexIssue) remain on.
  { root = "src/shenbi/gates", reportUnusedImport = "none", reportPrivateUsage = "none", reportUnusedVariable = "none", reportUnusedFunction = "none", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownParameterType = "none", reportUnknownLambdaType = "none", reportUnknownMemberType = "none" },
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
norecursedirs = [
    "tests/rounds",
    "tests/fixtures",
    "tests/baselines",
    "tests/coverage",
    "tests/tiers",
    "tests/dispatcher",
    "tests/benchmarks",
    "tests/pressure-tests",
    "tests/skill-behavior",
    "tests/skill-triggering",
    ".hypothesis",
]
addopts = [
    "--strict-markers",
    "--cov=shenbi",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage",
    "--cov-report=xml:tests/coverage/coverage.xml",
    "--cov-branch",
    "--timeout=60",
    "--timeout-method=thread",
    "--benchmark-min-rounds=5",
    "--benchmark-warmup=on",
]
markers = [
    "unit: fast unit tests",
    "integration: cross-module tests",
    "property: Hypothesis property-based tests",
    "benchmark: pytest-benchmark performance tests",
    "slow: > 5s tests",
    "last: tests that must run after all others (e.g., coverage threshold)",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/shenbi"]

[tool.coverage.report]
# Staged ramp-up. Current line coverage ~1% (most framework code is legacy
# untyped modules). Target trajectory: 90% after P-3.
#
# P-1.E PR-26 NOTE: fail_under is set to the CURRENT actual coverage (1%)
# so regressions are caught without putting main red. Plan 4 PR-28~32 will
# raise coverage to ~90% — at that point, fail_under must be restored to 90
# in the SAME Plan 4 PR that removes the density test xfail. Setting
# fail_under=90 today would block all merges until Plan 4 lands.
fail_under = 1
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
