[project]
name = "shenbi"
version = "0.1.0"
description = "Shenbi novel-writing AI skill framework"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ThomasChangX" }]
requires-python = ">=3.11"
dependencies = [
    "jieba==0.42.1",
    "pydantic>=2.5.0",        # P-1 不用；为 P0 schemas 准备
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "numpy>=1.26.0",          # Wave 2 Task 2: Route B float32 cosine similarity (truth_embed)
    # 注：去除 patch>=1.16（unmaintained since 2016, codebase 用 unittest.mock）
    # 注：去除 click>=8.1.7（CLI 用 stdlib argparse，无需第三方框架；如未来需要 rich CLI 再加）
    # 注：sentence-transformers 移至 [project.optional-dependencies].embeddings
    #     避免 core install 拉入 torch/CUDA 等大型 ML 依赖
    "openai>=2.44.0",
]
[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
    "pytest-ordering>=0.6",
    "pytest-randomly>=3.15.0",
    "hypothesis>=6.97.0",
    "mypy>=1.8.0",
    "basedpyright>=1.13.0",
    "ruff>=0.1.13",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
    "cyclonedx-bom>=4.0.0",
    "mutmut>=3.0.0",
    "coverage>=7.4.0",
    "yamllint>=1.33.0",
    "git-cliff>=2.4.0",
    "types-PyYAML>=6.0.12",
    "sentence-transformers>=3.0.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material[imaging]>=9.5.4",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0",
]

[project.scripts]
shenbi-validate = "shenbi.gates.cli:main"
shenbi-dispatch = "shenbi.dispatcher.cli:main"
shenbi-score = "shenbi.scoring:main"
shenbi-phase = "shenbi.phase_runner:main"
shenbi-sync-contracts = "shenbi.sync_contracts:main"
shenbi-generate-plugins = "shenbi.plugins.generate:main"
shenbi-cost = "shenbi.cost.report:main"
pipeline = "shenbi.pipeline.cli:main"
pipeline-truth-index = "shenbi.pipeline.truth_index:main"
pipeline-truth-embed = "shenbi.pipeline.truth_embed:main"
pipeline-context-assemble = "shenbi.pipeline.context_assemble:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shenbi"]

# Mutation testing configuration (P-1 加成项 19，baseline 跑在 PR-23)
[[tool.mypy.overrides]]
# Pydantic v2 @computed_field stacks on @property — mypy's prop-decorator
# check rejects this. It's the official pydantic pattern; disable per-module.
module = "shenbi.contracts.*"
disable_error_code = ["prop-decorator"]

[[tool.mypy.overrides]]
module = "jieba.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
follow_imports = "skip"
ignore_errors = true

[tool.mutmut]
# mutmut 3.x reads underscored keys; the prior hyphenated names
# (paths-to-mutate / tests-dir / do-not-mutate) were silently ignored, so
# mutmut mutated a default set and ran the whole suite (including integration
# tests that subprocess-run gates needing skills/, which is absent in mutants/).
paths_to_mutate = ["src/shenbi/exceptions.py", "src/shenbi/logging.py", "src/shenbi/gates/shared.py"]
pytest_add_cli_args_test_selection = ["tests/unit/"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "B",
    "A",
    "C4",
    "PIE", "RET", "SIM",
    "PL",
    "UP",
    "RUF",
    "D",
]
ignore = [
    "D100", "D104",
    "PLR0913",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"skills/**/*.md" = ["ALL"]
"tools/audit-skill-descriptions.py" = ["N999"]
# P-1.A: legacy code in tests/*.py has many style violations.
# PR-12 (P-1.D) will refactor these files and remove the ignores.
"tests/*.py" = [
    "D103", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
]
# P-1.E temporary: moved legacy code now at src/shenbi/*.py inherits the
# same suppression set as tests/*.py. Removed module-by-module in PR-25
# (Cluster 03) as type annotations and cleanup land.
"src/shenbi/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
# P-1.E PR-19: per-gate modules extracted from validate-gate.py carry the
# same legacy-untyped status. Removed in PR-25 (Cluster 03 cleanup).
"src/shenbi/gates/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901", "PLW0603",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
# P-1.E: contracts/ subpackage (new code, spec 支柱一). Same suppression set
# as src/shenbi/*.py — Chinese docstrings use fullwidth punctuation (RUF001-003).
"src/shenbi/contracts/*.py" = [
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
# 支柱四 Tier B: new records/ + audit/ subpackages. Chinese docstrings use
# fullwidth punctuation (RUF001-003). Same minimal suppression as contracts/.
"src/shenbi/records/*.py" = [
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"src/shenbi/audit/*.py" = [
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/unit/records/*.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/unit/audit/*.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/unit/contracts/test_ownership.py" = [
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059", "F401",
]
"tests/unit/dispatcher/*.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"src/shenbi/trace/*.py" = [
    "D103", "D107", "E402", "D101", "D102", "D205", "D415", "E501", "E741",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059", "PLC0415",
]
"tests/unit/trace/*.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402", "E501", "E741",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/property/trace/*.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402", "E501", "E741",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"src/shenbi/text/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/unit/text/*.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/property/cjk/*.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/property/stats/*.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/property/drift/*.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/property/cjk/test_punct_properties.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/property/cjk/test_g612_embedded_properties.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/property/cjk/test_tokenize_frozen.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/property/gates/test_g34_independence_properties.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/property/gates/test_capability_fs_properties.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"tests/property/contracts/*.py" = [
    "D103", "D101", "D102", "D205", "D415", "E402",
    "I001", "F401", "F841", "PLR2004",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
]
"src/shenbi/capability_fs.py" = ["RUF001", "RUF002", "RUF003", "RUF005", "RUF059"]
"src/shenbi/gates/g3_independence.py" = ["RUF001", "RUF002", "RUF003", "RUF005", "RUF059"]
"src/shenbi/gates/g4/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901", "PLW0603",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
"src/shenbi/dispatcher/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901", "PLW0603",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
"src/shenbi/dispatcher/modes/*.py" = [
    "D103", "E402", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901", "PLW0603",
    "PIE810",
    "RUF001", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
"src/shenbi/exceptions.py" = ["D107", "D105", "N818"]
"src/shenbi/skill_utils/*.py" = [
    "D103", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901",
    "PIE810",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105",
    "C401", "C416",
    "B007",
    "I001",
]
"src/shenbi/skill_utils/**/*.py" = [
    "D103", "D101", "D102", "D205", "D415",
    "E501", "E741", "E722",
    "F841",
    "N802", "N806", "N999",
    "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004",
    "PLC0415", "PLW1510", "PLW2901",
    "PIE810",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF059",
    "SIM102", "SIM105", "SIM108",
    "C401", "C416",
    "B007",
    "I001",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true

[tool.basedpyright]
include = ["tests", "src/shenbi"]
exclude = [
    "**/__pycache__",
    # P-1.A: legacy untyped code; P-1.D PR-12 removes these exclusions
]
typeCheckingMode = "strict"
pythonVersion = "3.11"
# tools/ holds repo lints imported by unit tests (tools/__init__.py makes it a
# package; "." puts the repo root on the import search path so they resolve).
extraPaths = ["."]
reportMissingTypeStubs = "none"
# Unknown-family rules downgraded to warning for JSON/YAML dict access.
# Gates load heterogeneous external data (progress.json, deps.json, etc.)
# via jload/yload returning dict[str, Any]. Value access propagates Any,
# which strict mode flags as Unknown. These rules catch noise, not bugs —
# real type errors are still caught by reportArgumentType,
# reportPossiblyUnboundVariable, reportIndexIssue, reportUnnecessaryIsInstance.
# TypedDicts at boundaries would be the "proper" fix but require ongoing
# schema maintenance that doesn't suit this project's evolution stage.
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"

# Per-directory overrides via executionEnvironments (basedpyright's
# supported mechanism — [[tool.basedpyright.overrides]] is not recognized).
# Rationale and revisit plan: docs/basedpyright-overrides.md
executionEnvironments = [
  # tests/: industry-norm relaxation for test code (Mock, fixtures, dynamic setattr).
  { root = "tests", reportUnusedVariable = "none", reportUnusedFunction = "none", reportUnusedImport = "none", reportUnknownVariableType = "none", reportUnknownLambdaType = "none", reportUnknownParameterType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportMissingParameterType = "none", reportPrivateUsage = "none" },
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
norecursedirs = [
    "tests/fixtures",
    "tests/baselines",
    "tests/coverage",
    "tests/tiers",
    "tests/dispatcher",
    "tests/benchmarks",
    "tests/pressure-tests",
    "tests/skill-behavior",
    "tests/skill-triggering",
    ".hypothesis",
]
addopts = [
    "--strict-markers",
    "--cov=shenbi",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage",
    "--cov-report=xml:tests/coverage/coverage.xml",
    "--cov-branch",
    "--timeout=60",
    "--timeout-method=thread",
    "--benchmark-min-rounds=5",
    "--benchmark-warmup=on",
]
markers = [
    "unit: fast unit tests",
    "integration: cross-module tests",
    "property: Hypothesis property-based tests",
    "benchmark: pytest-benchmark performance tests",
    "slow: > 5s tests",
    "last: tests that must run after all others (e.g., coverage threshold)",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/shenbi"]

[tool.coverage.report]
# P-1.E PR-56: target reached. Phase 3 closed the coverage gap to >=90% line /
# >=80% branch. Threshold is now permanent — regressions will fail CI.
# 89 (not 90) to accommodate Windows: 2 G7 chmod tests are skipif(win32)
# (chmod permissions are not honored on Windows NTFS), leaving ~35 lines
# of g7.py uncovered there. POSIX remains at 90%+.
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
